--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhY
 PORT=4000
 STORAGE_BUCKET=posts
 MAX_UPLOAD_BYTES=10485760
-CORS_ORIGINS=http://localhost:3000
+CORS_ORIGINS= https://render.com/docs/web-services#port-binding
