--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ PORT=4000
 STORAGE_BUCKET=posts
 MAX_UPLOAD_BYTES=10485760
 CORS_ORIGINS= https://render.com/docs/web-services#port-binding
+CORS_ORIGINS=https://karan-rajput-0019.github.io,http://localhost:3000
